# sem-art-search

./: .dockerignore  .envrc.example  .gitignore  Dockerfile  README.md  blog-post.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  frontend-nginx.conf  package-lock.json  postgresql.conf  prod.Dockerfile  pyproject.toml
backend/: Dockerfile  backend.Dockerfile  bulk_embed.sh  config.py  dev.Dockerfile  dev_start.sh  etl.Dockerfile  main.py  multiprocessing.sh  prod.Dockerfile  prod_start.sh  pyproject.toml  start.sh  test_embed.sh  test_input.json
backend/app/: main.py
backend/app/routers/: art.py
backend/app/tests/: test_app.py
backend/db/: crud.py  models.py
backend/etl/: bulk_embed.py  constants.py  dim_reduc.py  errors.py  extract.py  images.py  main.py  run_etl.sh  sources.py
backend/etl/embed/: config.py  embed.py  get_text_model.py  models.py
backend/etl/infra/: embed_handler.py  extract_handler.py
backend/etl/rijksmuseum/: main.py  wrapper.py
backend/models/: pca.joblib
etl/: main.py
etl/rijksmuseum/: wrapper.py
frontend/: app.vue  bun.Dockerfile  bun.lockb  dev.Dockerfile  nginx.conf  npm.Dockerfile  nuxt.config.ts  package-lock.json  package.json  prod.Dockerfile  tailwind.config.ts
frontend/pages/: index.vue
frontend/pages/about/: index.vue
frontend/pages/alternative/: index.vue
frontend/utils/pixi-cull/: index.ts  simple.ts  spatial-hash.ts  types.ts
models/: pca.joblib
src/: __init__.py  data.py  embed.py  main.py
src/app/: main.py
src/app/routers/: art.py
src/app/tests/: test_app.py
src/db/: crud.py  models.py
src/etl/: crud.py  dim_reduc.py  embed.py  errors.py  etl.py  extract.py  images.py  main.py
src/etl/embed/: config.py  embed.py  models.py
src/etl/rijksmuseum/: wrapper.py
src/frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
src/frontend/pages/: index.vue
src/frontend/pages/alternative/: index.vue
src/frontend/utils/pixi-cull/: simple.ts  spatial-hash.ts
src/models/: __init__.py  connection.py  models.py
