[tool.poetry]
name = "sem-art-search"
version = "0.1.0"
description = ""
authors = ["Sjors Lockhorst <sjors@lockhorst.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "^0.0.18"
pgvector = "^0.2.5"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
torch = "^2.3.0"
transformers = "^4.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
