[tool.poetry]
name = "sem-art-search"
version = "0.1.0"
description = ""
authors = ["Sjors Lockhorst <sjors@lockhorst.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "^0.0.18"
pgvector = "^0.2.5"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
torch = "^2.3.0"
transformers = "^4.41.2"
loguru = "^0.7.2"
pytest = "^8.2.2"
scikit-learn = "^1.5.0"
joblib = "^1.4.2"
matplotlib = "^3.9.0"

[tool.pylsp-mypy]
enabled = true
live_mode = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
